--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
     "@faker-js/faker": "^8.4.1",
     "@reduxjs/toolkit": "^2.2.6",
     "mongodb": "^6.8.0",
-    "next": "14.2.4",
-    "next-ws": "^1.1.1",
+    "next": "^14.2.4",
     "react": "^18",
     "react-dom": "^18",
     "react-redux": "^9.1.2",
-    "ws": "^8.18.0"
+    "socket.io": "^4.7.5",
+    "socket.io-client": "^4.7.5"
   },
   "devDependencies": {
     "@types/node": "^20",
